Aramis.Api.Web/Kubernetes/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  namespace: app
  labels:
    name: app-deploy
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app
      type: netapi
  template:
    metadata:
      name: app-pod
      namespace: app
      labels:
        name: app
        type: netapi
    spec:
      containers:
        - name: app-api
          image: aramisistemas/aramisback:version1.2
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
