Aramis.Api.Web/Kubernetes/app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    name: app
    type: netapi
spec:
  containers:
    - name: app-api
      image: aramisistemas/aramisback:version1.2
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 5000
