Aramis.Api.Web/Kubernetes/sqlserver-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deploy
  namespace: app
  labels:
    name: mssql-deploy
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      name: mssql-pod
  template:
    metadata:
      name: mssql-pod
      namespace: app
      labels:
        app: app
        name: mssql-pod
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server
          ports:
            - containerPort: 1433
