Aramis.Api.Web/Kubernetes/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  labels:
    name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: aramis.35.188.20.15.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-service
            port: 
              number: 80
